--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Shared/_Layout.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Shared/_Layout.cshtml
@@ -54,11 +54,11 @@
         <footer class="main-footer element-center transparent-background" style="width: 59%; border-radius: 5px">
             <strong>
                 Copyright &copy;
-                <script>document.write(new Date().getFullYear());</script> <a href="#">SalaUFS</a>.
+                <script>document.write(new Date().getFullYear());</script> <a href="http://g2psi.educacao.ws/" target="_blank">G2PSI</a>.
             </strong>
             All rights reserved.
             <div class="float-right d-none d-sm-inline-block">
-                <b>Version</b> 1.0
+                <b>Version</b> 4.1.0
             </div>
         </footer>
         }
@@ -80,11 +80,11 @@
         <footer class="main-footer element-center transparent-background" style="border-radius: 5px">
             <strong>
                 Copyright &copy;
-                <script>document.write(new Date().getFullYear());</script> <a href="#">SalaUFS</a>.
+                <script>document.write(new Date().getFullYear());</script> <a href="http://g2psi.educacao.ws/" target="_blank">G2PSI</a>.
             </strong>
             All rights reserved.
             <div class="float-right d-none d-sm-inline-block">
-                <b>Version</b> 1.0
+                <b>Version</b> 4.1.0
             </div>
         </footer>
         }
@@ -121,11 +121,11 @@ else
         <footer class="main-footer">
             <strong>
                 Copyright &copy;
-                <script>document.write(new Date().getFullYear());</script> <a href="#">SalaUFS</a>.
+                <script>document.write(new Date().getFullYear());</script> <a href="http://g2psi.educacao.ws/" target="_blank">G2PSI</a>.
             </strong>
             All rights reserved.
             <div class="float-right d-none d-sm-inline-block">
-                <b>Version</b> 1.0
+                <b>Version</b> 4.1.0
             </div>
         </footer>
 
