--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Planejamento/Create.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Planejamento/Create.cshtml
@@ -103,7 +103,7 @@
                                 </div>
 
                                 <div class="form-group align-element">
-                                    <a id="add-novo-horario" onclick="AdicionarNovoHorario()" class="btn btn-primary text-white"><i class="nav-icon fa fa-plus"></i> </a>
+                                    <a id="add-novo-horario" onclick="AdicionarNovoHorario();document.getElementById('horarioFim').value='';document.getElementById('horarioInicio').value=''" class="btn btn-primary text-white"><i class="nav-icon fa fa-plus"></i> </a>
                                 </div>
                                 <br />
                                 <span class="text-danger" id="mensagem-erro-horarios" hidden></span>
