--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/ConexaoInternet/Edit.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/ConexaoInternet/Edit.cshtml
@@ -13,6 +13,7 @@
                         <h2 class="card-title">Editar Ponto de Acesso WI-FI</h2>
                     </div>
                     <form asp-action="Edit">
+                        <input type="hidden" asp-for="Id" />
                         <div class="card-body">
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                             <div class="col-md-5">
@@ -41,7 +42,21 @@
                                     </div>
                                 </div>
                                 <div>
-                                    <label asp-for="Senha" class="control-label"></label>
+                                    <div class="form-group">
+                                        <label for="SenhaAtual" class="control-label">Senha Atual</label>
+                                        <div style="display: flex; align-items: center;">
+                                            <input id="senha_atual" name="SenhaAtual" class="form-control" maxlength="63" type="password" style="width:55%; margin-right: 5px;" required />
+                                            <div class="icheck-primary d-inline-block">
+                                                <input type="checkbox" id="show_pass_atual" onchange="showPass(this, 'senha_atual')">
+                                                <label for="show_pass_atual">Mostrar Senha</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <span id="senhaAtualError" class="text-danger"></span>
+                                </div>
+
+                                <div>
+                                    <label asp-for="Senha" class="control-label">Nova Senha</label>
                                     <div class="form-group" style="display: flex; align-items: center;">
                                         <input id="senha_auth" asp-for="Senha" class="form-control" maxlength="63" rows="1" type="password" style="width:55%; margin-right: 5px;" />
                                         <div class="icheck-primary d-inline-block">
@@ -51,9 +66,10 @@
                                     </div>
                                 </div>
                                 <span asp-validation-for="Senha" class="text-danger"></span>
+
                                 <div>
                                     <div class="form-group">
-                                        <label asp-for="ConfirmarSenha" class="control-label"></label>
+                                        <label asp-for="ConfirmarSenha" class="control-label">Confirmar Nova Senha</label>
                                         <input id="confirmar_senha_auth" asp-for="ConfirmarSenha" class="form-control" maxlength="63" rows="1" type="password" style="width:55%" />
                                     </div>
                                 </div>
@@ -84,12 +100,21 @@ else if (TempData["mensagemErro"] != null)
 }
 
 @section Scripts {
-    <script>
-        $(document).ready(function () {
-            if (document.querySelector('#mensagem-retorno'))
-                document.getElementById("mensagem-retorno").click();
-        });
+    <!-- jQuery primeiro -->
+    <script src="~/plugins/jquery/jquery.min.js"></script>
 
+    <!-- Depois as dependências -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <script src="~/js/sweet-alert.js"></script>
+    <script src="~/plugins/inputmask/inputmask/jquery.mask.js"></script>
+    <script src="~/plugins/inputmask/min/inputmask/inputmask.min.js"></script>
+    <script src="~/plugins/inputmask/min/inputmask/jquery.inputmask.min.js"></script>
+    <script src="~/js/bloco-script.js"></script>
+    <script src="~/js/custom.js"></script>
+    <script src="~/js/customLogin.js"></script>
+
+    <!-- Seu script personalizado -->
+    <script>
         function showPass(checkbox, inputId) {
             var input = document.getElementById(inputId);
             if (checkbox.checked) {
@@ -98,19 +123,53 @@ else if (TempData["mensagemErro"] != null)
                 input.type = 'password';
             }
         }
+
+        $(document).ready(function () {
+            if (document.querySelector('#mensagem-retorno'))
+                document.getElementById("mensagem-retorno").click();
+
+            // Interceptar o evento de submit do formulário
+            $('form').on('submit', function(e) {
+                // Verificar se a senha atual está correta
+                var senhaAtual = $('#senha_atual').val();
+                var conexaoId = '@Model.Id';
+                var isValid = false;
+
+                if (!senhaAtual) {
+                    $('#senhaAtualError').text('A senha atual é obrigatória');
+                    e.preventDefault();
+                    return false;
+                }
+
+                // Validar a senha atual via AJAX
+                $.ajax({
+                    url: '@Url.Action("ValidarSenhaAtual")',
+                    type: 'POST',
+                    async: false,
+                    data: {
+                        id: conexaoId,
+                        senhaAtual: senhaAtual
+                    },
+                    success: function(result) {
+                        if (!result) {
+                            $('#senhaAtualError').text('Senha atual incorreta');
+                            isValid = false;
+                        } else {
+                            $('#senhaAtualError').text('');
+                            isValid = true;
+                        }
+                    }
+                });
+
+                if (!isValid) {
+                    e.preventDefault();
+                    return false;
+                }
+            });
+        });
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-    <script src="~/js/sweet-alert.js"></script>
-    <script src="~/js/bloco-script.js"></script>
-    <script src="~/js/custom.js"></script>
-    <script src="~/plugins/inputmask/inputmask/jquery.mask.js"></script>
-    <script src="~/plugins/jquery/jquery.min.js"></script>
-    <script src="~/plugins/inputmask/min/inputmask/inputmask.min.js"></script>
-    <script src="~/plugins/inputmask/min/inputmask/jquery.inputmask.min.js"></script>
-    <script src="~/js/customLogin.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-    <script src="~/js/sweet-alert.js"></script>
-}
-@{
-    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
