--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Sala/Details.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Sala/Details.cshtml
@@ -99,7 +99,7 @@
                                                                     @if (Model.ConexaoSala == null || !Model.ConexaoSala.Any())
                                                                     {
                                                                         <tr>
-                                                                            <td class="text-center">Nenhum ponto de acesso cadastrado para esta sala.</td>
+                                                                            <td class="text-center">Nenhum ponto de acesso associado para esta sala.</td>
                                                                         </tr>
                                                                     }
                                                                     else
@@ -107,9 +107,60 @@
                                                                         @foreach (var item in Model.ConexaoSala.OrderBy(x => x.Prioridade))
                                                                         {
                                                                             <tr>
-                                                                                <td>Nome da Rede: @item.Ssid / Prioridade : @item.Prioridade</td>
+                                                                                <td>Rede: @item.Ssid / Prioridade : @item.Prioridade</td>
                                                                             </tr>
                                                                         }
+                                                                    }
+                                                                </tbody>
+                                                            </table>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </section>
+                                <dd>
+                                <dt>
+                                   Equipamentos
+                                </dt>
+                                <dd>
+                                    <section class="content">
+                                        <div class="container-fluid">
+                                            <div class="row">
+                                                <div class="col-8">
+                                                    <div class="card">
+                                                        <div class="card-header">
+                                                            <div class="row">
+                                                                <div class="col-md-8">
+                                                                    <h2 class="card-title">
+                                                                    </h2>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="card-body">
+                                                            <table id="table-search" class="table table-bordered table-striped">
+                                                                <thead>
+                                                                    <tr>
+                                                                        <th>Equipamentos Associados</th>
+                                                                    </tr>
+                                                                </thead>
+                                                                <tbody>
+                                                                    @if (Model.EquipamentoSala == null || !Model.EquipamentoSala.Any())
+                                                                    {
+                                                                        <tr>
+                                                                            <td class="text-center">Nenhum ponto de acesso associado para esta sala.</td>
+                                                                        </tr>
+                                                                    }
+                                                                    else
+                                                                    {
+                                                                        @foreach (var item in Model.EquipamentoSala)
+                                                                        {
+                                                                            <tr>
+                                                                                <td>
+                                                                                    Tipo: @item.TipoEquipamento / Marca: @item.Marca / Modelo: @item.Modelo
+                                                                                </td>
+                                                                            </tr>
+                                                                        }                                                                  
                                                                     }
                                                                 </tbody>
                                                             </table>
